<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="generalClickListener"
            type="com.app.doctorapp.businesslogic.interfaces.GeneralClickListener" />

        <variable
            name="mViewmodel"
            type="com.app.doctorapp.businesslogic.viewmodels.fragment.doctor.FragViewModelPrescription" />

    </data>

    <LinearLayout
        android:id="@+id/cc"
        android:transitionName="container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        showSnackBarString="@{mViewmodel.observerSnackBarString}"
        tools:context=".view.fragment.doctor.FragmentBottomSheet">

        <TextView
            style="@style/birthdayUpper"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/medicine_name" />

        <EditText
            style="@style/signEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={mViewmodel.observeMName}" />


        <TextView
            style="@style/birthdayUpper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/quantity" />


        <EditText
            style="@style/signEdit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="number"
            android:maxLength="3"
            android:text="@={mViewmodel.observeMQty}" />

        <TextView
            style="@style/birthdayUpper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/description_of_dose" />


        <EditText
            style="@style/signEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="top|start"
            android:lines="3"

            android:text="@={mViewmodel.observeMDesc}" />

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/main_color"
            android:onClick="@{generalClickListener::onClick}"
            android:text="ADD"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>