<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.app.doctorapp.utils.EnumVisibility" />
        <import type="android.view.View" />

        <variable
            name="generalClickListener"
            type="com.app.doctorapp.businesslogic.interfaces.GeneralClickListener" />

        <variable
            name="mViewmodel"
            type="com.app.doctorapp.businesslogic.viewmodels.fragment.FragViewModelSignUp" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grayscale4"

        showSnackBarString="@{mViewmodel.observerSnackBarString}"
        tools:context=".view.fragment.FragmentSignUp">
        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminateDrawable="@drawable/rotating_icon"
            android:max="3"
            android:elevation="5dp"

            android:progress="100"
            android:progressDrawable="@drawable/rotating_icon"
            android:visibility="@{mViewmodel.observeVisibility==EnumVisibility.LOADING ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:elevation="3dp"
            android:src="@drawable/ic_main_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <TextView
                style="@style/birthdayUpper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name" />

            <EditText
                style="@style/signEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={mViewmodel.observeName}" />

            <TextView
                style="@style/birthdayUpper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"

                android:text="@string/mobile" />

            <EditText
                style="@style/signEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:text="@={mViewmodel.observeMobile}" />

            <TextView
                style="@style/birthdayUpper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"

                android:text="@string/email" />

            <EditText
                style="@style/signEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"

                android:text="@={mViewmodel.observeEmail}" />

            <TextView
                style="@style/birthdayUpper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/password" />


            <EditText
                style="@style/signEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="8dp"
                android:text="@={mViewmodel.observePass}"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="20sp"
                    android:layout_height="wrap_content"
                    android:checked="@={mViewmodel.observeCheck}"
                    app:buttonTint="@color/main_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="I agree with Terms and "
                    android:textColor="@color/grayscale2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_medium"
                    android:onClick="@{generalClickListener::onClick}"
                    android:padding="3dp"
                    android:text="Privacy Policy"
                    android:textColor="@color/main_color" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/main_color"
            android:onClick="@{generalClickListener::onClick}"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/already_have_account"
                android:textColor="@color/grayscale2" />

            <TextView
                android:id="@+id/signInBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_medium"
                android:onClick="@{generalClickListener::onClick}"
                android:padding="3dp"
                android:text="@string/sign_in"
                android:textColor="@color/main_color" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>