<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.app.doctorapp.utils.EnumUser" />

        <variable
            name="generalClickListener"
            type="com.app.doctorapp.businesslogic.interfaces.GeneralClickListener" />

        <variable
            name="mViewmodel"
            type="com.app.doctorapp.businesslogic.viewmodels.fragment.FragViewModelWel2" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.FragmentWelcome2">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:elevation="3dp"
            android:src="@drawable/ic_main_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/lets_get_acquainted"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/gilroy_medium"
            android:gravity="center"
            android:text="Pellentesque placerat arcu in risus facilisis, sed\nlaoreet eros laoreet."
            android:textColor="@color/grayscale2"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/main_color"
            android:onClick="@{generalClickListener::onClick}"
            android:text="@string/Continue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.25">


            <LinearLayout
                android:id="@+id/llPatient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="@{generalClickListener::onClick}"
                android:orientation="horizontal"
                android:padding="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@{mViewmodel.observeUser==EnumUser.PATIENT? @drawable/main_10 : null}"
                    android:padding="15dp"
                    android:src="@drawable/ic_patient"
                    android:tint="@{mViewmodel.observeUser==EnumUser.PATIENT? @color/white :@color/black}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:fontFamily="@font/gilroy_semibold"
                    android:text="@string/im_a_patient"
                    android:textColor="@{mViewmodel.observeUser==EnumUser.PATIENT? @color/main_color :@color/black}"

                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDoctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="@{generalClickListener::onClick}"
                android:orientation="horizontal"
                android:padding="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llPatient">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@{mViewmodel.observeUser==EnumUser.DOCTOR? @drawable/main_10 : null}"
                    android:padding="15dp"

                    android:src="@drawable/ic_doctor"
                    android:tint="@{mViewmodel.observeUser==EnumUser.DOCTOR? @color/white :@color/black}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:fontFamily="@font/gilroy_semibold"
                    android:text="@string/im_a_doctor"
                    android:textColor="@{mViewmodel.observeUser==EnumUser.DOCTOR? @color/main_color :@color/black}"

                    android:textSize="18sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>